--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
         {% endblock %}
     </head>
     <body>
+        {% include "static/navbar.html.twig" %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
