--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
             <div class="container-fluid">
+                <img src="/logo.png" alt="MealitUP Logo" width="170" height="140" class="d-inline-block align-text-top me-2">
+
                 <a class="navbar-brand" href="#">MealitUP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
