--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}MealItUp{% endblock %}</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>🍽️</text></svg>">
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% include "static/navbar.html.twig" %}
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <link rel="stylesheet" href="{{ asset('css/contact.css') }}">
+
+    {% block stylesheets %}{% endblock %}
+</head>
+
+
+<body class="d-flex flex-column min-vh-100">
+
+    {% include 'static/navbar.html.twig' %}
+
+    <main class="flex-shrink-0">
         {% block body %}{% endblock %}
-    </body>
+    </main>
+
+    <footer style="background-color: #0d2c57;" class="text-white text-center py-4 mt-auto">
+        <div class="container">
+            <div class="mb-3">
+                <a href="https://facebook.com" target="_blank" class="text-white me-3">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+                <a href="https://instagram.com" target="_blank" class="text-white me-3">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="https://reddit.com" target="_blank" class="text-white me-3">
+                    <i class="fab fa-reddit fa-2x"></i>
+                </a>
+                <a href="https://linkedin.com" target="_blank" class="text-white me-3">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </div>
+            <div class="mb-3">
+                <a href="{{ path('app_home') }}" class="text-white me-3">Home</a>
+                <a href="{{ path('app_about') }}" class="text-white me-3">About</a>
+                <a href="{{ path('app_contact') }}" class="text-white">Contact</a>
+            </div>
+            <div>
+                <small>© 2025 MealItUp. All rights reserved.</small>
+            </div>
+        </div>
+    </footer>
+
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+</body>
 </html>
+
