--- a/templates/static/index.html.twig
+++ b/templates/static/index.html.twig
@@ -3,18 +3,20 @@
 {% block title %}Hello StaticController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>D:/Codefactory_Backend/MealitUP/mealitup/src/Controller/StaticController.php</code></li>
-        <li>Your template at <code>D:/Codefactory_Backend/MealitUP/mealitup/templates/static/index.html.twig</code></li>
-    </ul>
-</div>
+<h1> hallo ich bin der index</h1>
+
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+<h1> hallo ich bin der index</h1>
+
+
 {% endblock %}
