--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>{% block title %}MealItUp{% endblock %}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>🍽️</text></svg>">
+    <!-- Bootstrap CSS  -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
@@ -19,6 +22,9 @@
         </main>
     
         {% include "static/footer2.html.twig" %}
+        <!-- Bootstrap JavaScript  -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
       </body>
    
 
