--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -9,13 +9,29 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">How it works</a>
+                            <a class="nav-link" href="{{ path('app_about') }}">How it works</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Browse Recipe</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sign Up</a>
+                            <a class="nav-link"  href="{{ path('app_home') }}">Home</a> 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shopping List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Meal Planner</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  href="{{ path('app_register') }}">Register</a> 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  href="{{ path('app_login') }}">Sign Up</a> 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  href="{{ path('app_logout') }}">Log out</a> 
                         </li>
                     </ul>
                 </div>
