--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link"  href="{{ path('app_logout') }}">Log out</a> 
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  href="{{ path('app_contact') }}">Contact</a> 
+                        </li>
                     </ul>
                 </div>
             </div>
