--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -19,7 +19,7 @@
                             <a class="nav-link"  href="{{ path('app_home') }}">Home</a> 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shopping List</a>
+                            <a class="nav-link" href="{{ path('app_shopping_list') }}">Shopping List</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Meal Planner</a>
