--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -12,7 +12,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">Browse Recipe</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('app_home') }}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Shopping List</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Meal Planner</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('app_meal_plan_index') }}">Meal Planner</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('app_contact') }}">Contact</a></li>
 
                 <li class="nav-item">
