--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,8 @@
     <!-- Bootstrap CSS  -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{ asset('css/mealplan.css') }}">
+<link rel="stylesheet" href="{{ asset('css/wave.css') }}">
+
 
 
         {% block javascripts %}
