--- a/templates/static/home.html.twig
+++ b/templates/static/home.html.twig
@@ -200,6 +200,33 @@ body {
     <img id="bob" alt="Bob" src="images/bob.gif" width="78" height="231" />
     <img id="head" alt="Bobs Kopf" src="images/head.gif" width="48" height="75" />
   </div>
+  <div style="text-align: center; margin-top: 40px;">
+    <p style="font-size: 1.4rem; font-weight: bold;">Scan the QR code to download the MealItUp app</p>
+    
+    <img src="qrcode.png" alt="QR Code" style="width: 300px; margin: 20px auto; border: 1px solid #ccc; padding: 10px; border-radius: 8px; background-color: white;">
+    
+    <p style="margin-top: 20px;">Available on:</p>
+    
+    <div style="display: flex; justify-content: center; gap: 10px; flex-wrap: wrap;">
+        <a href="https://play.google.com/store" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
+                 alt="Get it on Google Play" 
+                 style="height: 50px;">
+        </a>
+        <a href="https://www.apple.com/app-store/" target="_blank">
+            <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+                 alt="Download on the App Store" 
+                 style="height: 50px;">
+        </a>
+    </div>
+</div>
+
+  
+</div>
+<br><br><br><br>
+
+ 
+
 </body>
 
 
