--- a/templates/meal_plan/new.html.twig
+++ b/templates/meal_plan/new.html.twig
@@ -15,7 +15,7 @@
             </div>
 
             <div class="text-center mt-3">
-                <a href="{{ path('app_meal_plan_index') }}" class="btn btn-outline-secondary">← Back to List</a>
+                <a href="{{ path('app_meal_plan_index') }}" class="btn btn-mealplan">← Back to List</a>
             </div>
         </div>
     </div>
