--- a/templates/meal_plan/show.html.twig
+++ b/templates/meal_plan/show.html.twig
@@ -24,8 +24,8 @@
     </table>
 
     <div class="d-flex justify-content-between mt-4">
-        <a href="{{ path('app_meal_plan_index') }}" class="btn btn-sm mealplan-btn-back">← Back to List</a>
-        <a href="{{ path('app_meal_plan_edit', {'id': meal_plan.id}) }}" class="btn btn-sm mealplan-btn-edit">✎ Edit</a>
+        <a href="{{ path('app_meal_plan_index') }}" class="btn btn-sm btn-mealplan">← Back to List</a>
+        <a href="{{ path('app_meal_plan_edit', {'id': meal_plan.id}) }}" class="btn btn-sm btn-mealplan">✎ Edit</a>
     </div>
 
     <div class="mt-3">
