--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,27 +4,106 @@
     <meta charset="UTF-8">
     <title>{% block title %}MealItUp{% endblock %}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>:messer_gabel_teller:</text></svg>">
-    <!-- Bootstrap CSS  -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{{ asset('css/mealplan.css') }}">
-<link rel="stylesheet" href="{{ asset('css/wave.css') }}">
+    
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('css/mealplan.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/wave.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/contact.css') }}">
+
+<style>
+
+    
+    body {
+        padding-top: 100px;
+    }
 
 
+    .navbar-nav .nav-link {
+        position: relative;
+        display: inline-block;
+        padding-bottom: 4px;
+        transition: all 0.3s ease;
+        color: #5a3e2b; /* dein Braunton */
+    }
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
+    .navbar-nav .nav-link::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 2px;
+        width: 0;
+        background-color: #5a3e2b;
+        transition: width 0.3s ease;
+    }
 
-        {% include "static/navbar.html.twig" %}
-        <main>
-          {% block body %}
-            {% include "static/index.html.twig" %}
-          {% endblock %}
-        </main>
-        {% include "static/footer2.html.twig" %}
-        <!-- Bootstrap JavaScript  -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-      </body>
+    .navbar-nav .nav-link:hover::after {
+        width: 100%;
+    }
+</style>
+
+
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+</head>
+<body>
+
+    {% include "static/navbar.html.twig" %}
+    
+    <main>
+      {% block body %}
+        {% include "static/index.html.twig" %}
+      {% endblock %}
+    </main>
+
+    {% include "static/footer2.html.twig" %}
+
+   
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 9999;">
+                <div class="toast align-items-center text-white bg-success border-0 show" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3000">
+                    <div class="d-flex">
+                        <div class="toast-body">
+                            {{ message }}
+                        </div>
+                        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    {% endfor %}
+
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+ <script>
+
+    window.addEventListener('load', () => {
+        const toastElList = [].slice.call(document.querySelectorAll('.toast'));
+        toastElList.map(toastEl => new bootstrap.Toast(toastEl).show());
+    });
+
+  
+    document.addEventListener("DOMContentLoaded", () => {
+        const navbarCollapse = document.querySelector(".navbar-collapse");
+
+        if (navbarCollapse) {
+            navbarCollapse.addEventListener("mouseleave", () => {
+                if (navbarCollapse.classList.contains("show")) {
+                    const bsCollapse = new bootstrap.Collapse(navbarCollapse, {
+                        toggle: false
+                    });
+                    bsCollapse.hide();
+                }
+            });
+        }
+    });
+</script>
+
+
+</body>
 </html>
