mockups_home_about

--- a/templates/static/about.html.twig
+++ b/templates/static/about.html.twig
@@ -36,14 +36,14 @@
 
     <br><br><br><br>
 
-    <div style="max-width: 600px; margin: 0 auto;">
-        <video controls style="width: 100%;" poster="">
-            <source src="{{ asset('mockup.mp4') }}" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
 
-    <br><br><br><br><br>
+
+    <video width="740" height="560" controls>
+        <source src="{{ asset('meal.mp4') }}" type="video/mp4">
+        Dein Browser unterstützt das Video-Tag nicht.
+      </video>
+
+      <br><br><br><br><br>
 
 
 </div>
