--- a/templates/static/home.html.twig
+++ b/templates/static/home.html.twig
@@ -200,6 +200,20 @@ body {
     <img id="bob" alt="Bob" src="images/bob.gif" width="78" height="231" />
     <img id="head" alt="Bobs Kopf" src="images/head.gif" width="48" height="75" />
   </div>
+
+  <br><br><br>
+
+  <video width="740" height="560" controls>
+    <source src="{{ asset('mealit.mp4') }}" type="video/mp4">
+    Dein Browser unterstützt das Video-Tag nicht.
+  </video>
+
+  <br><br><br><br><br>
+  <br><br><br><br><br>
+  <br><br><br><br><br>
+
+
+
   <div style="text-align: center; margin-top: 40px;">
     <p style="font-size: 1.4rem; font-weight: bold;">Scan the QR code to download the MealItUp app</p>
     
@@ -219,6 +233,15 @@ body {
                  style="height: 50px;">
         </a>
     </div>
+</div>
+
+<br><br><br><br><br><br><br><br>
+
+<div style="max-width: 600px; margin: 0 auto;">
+  <video controls style="width: 100%;" poster="">
+      <source src="{{ asset('mockup.mp4') }}" type="video/mp4">
+      Your browser does not support the video tag.
+  </video>
 </div>
 
   
