--- a/templates/static/about.html.twig
+++ b/templates/static/about.html.twig
@@ -45,6 +45,13 @@
 
       <br><br><br><br><br>
 
+      <video width="740" height="560" controls>
+        <source src="{{ asset('ym.mp4') }}" type="video/mp4">
+        Dein Browser unterstützt das Video-Tag nicht.
+      </video>
+
+      <br><br><br><br><br>
+
 
 </div>
 {% endblock %}
