--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_team') }}">Team</a>
+                </li>
 
                 {% if app.user and is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
