--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,7 +60,7 @@
       {% endblock %}
     </main>
 
-    {% include "static/footer2.html.twig" %}
+    {% include "static/ft.html.twig" %}
 
    
     {% for label, messages in app.flashes %}
