--- a/templates/team/team.html.twig
+++ b/templates/team/team.html.twig
@@ -16,7 +16,8 @@
             <img src="{{ member.image }}" alt="{{ member.name }}" style="width: 180px; height: 180px; object-fit: cover; border-radius: 50%; margin-bottom: 15px;">
             <h3 style="color: white; font-size: 22px;">{{ member.name }}</h3>
             <p style="color: white; font-size: 22px;"><strong>{{ member.role }}</strong></p>
-            <p style="color: white; font-size: 22px;"><em>Stärke:</em> {{ member.strength }}</p>
+            <p style="color: white; font-size: 22px;"><em>
+                Strength - </em> {{ member.strength }}</p>
         </div>
     {% endfor %}
 </div>
