--- a/templates/meal_plan/_delete_form.html.twig
+++ b/templates/meal_plan/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_meal_plan_delete', {'id': meal_plan.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ meal_plan.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn custom-button2">Delete</button>
 </form>
