image folder organise

--- a/templates/static/about.html.twig
+++ b/templates/static/about.html.twig
@@ -39,14 +39,14 @@
 
 
     <video width="740" height="560" controls>
-        <source src="{{ asset('meal.mp4') }}" type="video/mp4">
+        <source src="{{ asset('images/meal.mp4')}}" type="video/mp4">
         Dein Browser unterstützt das Video-Tag nicht.
       </video>
 
       <br><br><br><br><br>
 
       <video width="740" height="560" controls>
-        <source src="{{ asset('ym.mp4') }}" type="video/mp4">
+        <source src="{{ asset('images/ym.mp4') }}" type="video/mp4">
         Dein Browser unterstützt das Video-Tag nicht.
       </video>
 
