--- a/templates/static/ft.html.twig
+++ b/templates/static/ft.html.twig
@@ -105,7 +105,7 @@
     <div class="sparkle sparkle4"></div>
 
     <!-- Logo hinzufügen -->
-    <img src="logo.png" alt="Logo" class="logo" style="max-width: 200px; margin-bottom: 1rem;">
+    <img src="{{ asset('images/logo.png')}}" alt="Logo" class="logo" style="max-width: 200px; margin-bottom: 1rem;">
 
     <div class="footer-content">
         <p><em>Plan smart. Cook smart. Live smart.</em></p>
