--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -52,14 +52,14 @@
                         </span>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a href="{{ path('app_logout') }}" class="btn btn-danger">Log out</a>
+                        <a href="{{ path('app_logout') }}" class="btn btn-danger mx-3">Log out</a>
                     </li>
                 {% else %}
                     <li class="nav-item mb-2 mb-lg-0">
                         <a href="{{ path('app_register') }}" class="btn btn-outline-secondary">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{{ path('app_login') }}" class="btn btn-outline-success">Log in</a>
+                        <a href="{{ path('app_login') }}" class="btn btn-outline-success mx-3">Log in</a>
                     </li>
                 {% endif %}
             </ul>
