--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
     <div class="container-fluid">
-        <img src="/logo.png" alt="MealitUP Logo" width="120" height="100" class="me-2 rounded">
+        <img src="{{ asset('images/logo.png')}}" alt="MealitUP Logo" width="120" height="100" class="me-2 rounded">
         <a class="navbar-brand fw-bold fs-4" href="#">MealitUP</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
